--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.1.RELEASE'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	compile('org.postgresql:postgresql')
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.4.RELEASE'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
+	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
 }
 
 test {
