--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+	compile('io.springfox:springfox-swagger2:2.7.0')
+	compile('io.springfox:springfox-swagger-ui:2.7.0')
 	compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.2.RELEASE'
 	compileOnly 'org.projectlombok:lombok:1.18.12'
@@ -21,10 +23,10 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.1.RELEASE'
-	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
-	compile('org.postgresql:postgresql')
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	//compile('org.postgresql:postgresql')
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.4.RELEASE'
-	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
 }
 
 test {
