--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 #DATABASE CONFIGURATION
-#spring.jpa.database=mysql
-#spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
-#spring.datasource.username=kodilla
-#spring.datasource.password=Kodilla1321
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=kodilla
+spring.datasource.password=Kodilla1321
 
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=39812b9c4b47db2b62d480cef5c67b2c
