--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,6 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-admin.mail=nobosekitest@gmail.com
 management.endpoints.web.exposure.include=*
 # ACTUATOR INFO
 info.app.name=Task Application
@@ -35,5 +34,8 @@ info.company.name=TaskCrudAppCreator
 info.company.goal=Our goal is to make the world a better place!
 info.company.emial= tasks@crud.com
 info.company.phone= 744489230
+# ADMINISTRATION
+admin.name=Kodilla User
+admin.mail=nobosekitest@gmail.com
 
 
